--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# 工程预装模块
+﻿# 工程预装模块
 # 需要额外的python包，可直接在文件后面添加
 # 请确保指定的包和版本号，可通过pip安装
 
@@ -8,3 +8,4 @@ MarkupSafe==0.23
 Mako==1.0.4
 httplib2==0.9.1
 requests==2.9.1
+supervisor==3.2.3
